--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,7 @@
 	"displayName": "%extension.displayName%",
 	"description": "%extension.description%",
 	"publisher": "RooVeterinaryInc",
-	"version": "3.36.5",
+	"version": "4.36.5+gpt-5-pro5.2",
 	"icon": "assets/icons/icon.png",
 	"galleryBanner": {
 		"color": "#617A91",
@@ -371,6 +371,11 @@
 					"default": true,
 					"description": "%settings.enableCodeActions.description%"
 				},
+				"roo-cline.enableProviderLogging": {
+					"type": "boolean",
+					"default": false,
+					"description": "%settings.enableProviderLogging.description%"
+				},
 				"roo-cline.autoImportSettingsPath": {
 					"type": "string",
 					"default": "",
@@ -472,7 +477,7 @@
 		"node-cache": "^5.1.2",
 		"node-ipc": "^12.0.0",
 		"ollama": "^0.5.17",
-		"openai": "^5.12.2",
+		"openai": "^6.10.0",
 		"os-name": "^6.0.0",
 		"p-limit": "^6.2.0",
 		"p-wait-for": "^5.0.2",
